tests/snapshots/run_wpt_conformance__onnx_div_float16_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float16 3D tensors",
    "onnx",
    "PASS",
)
